// Issue: #142109960
// Protocol Buffer definitions for tick rate configuration
// Network Engineer - Network protocol extensions

syntax = "proto3";
package necp.realtime.v1;

option go_package = "github.com/necpgame/realtime-gateway-go/pkg/proto";

message TickRateConfig {
  int32 base = 1;
  int32 min = 2;
  int32 max = 3;
  bool adaptive = 4;
  int32 current = 5;
}

message TickRateUpdate {
  string zone_id = 1;
  TickRateConfig new_config = 2;
  string reason = 3;
  int64 timestamp_ms = 4;
}

message AdaptiveTickRateConfig {
  bool enabled = 1;
  int32 min_tickrate = 2;
  int32 max_tickrate = 3;
  int32 target_latency_ms = 4;
  float load_factor_threshold = 5;
  repeated int32 adaptive_levels = 6;
  int32 current_level = 7;
  int32 adjustment_interval_ms = 8;
  bool predictive_scaling = 9;
  float scaling_sensitivity = 10;
}



